# airflow-code-editor

./: .gitignore  .ignore  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  MANIFEST.in  Makefile  README.md  babel.config.js  changelog.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  sh.py  update_themes_js.py  vite.config.js  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml
airflow_code_editor/: VERSION  airflow_code_editor.py  app_builder_view.py  auth.py  cmds.py  code_editor_view.py  commons.py  fastapi_app.py  fastapi_security.py  flask_admin_view.py  fs.py  git.py  main.py  presigned.py  tree.py  utils.py  webshell.py
airflow_code_editor/api/: __init__.py  api.py  code_editor.yaml  endpoints.py  fastapi_endpoints.py  flask_endpoints.py
airflow_code_editor/static/: airflow_code_editor.js  airflow_code_editor.js.LICENSE.txt  airflow_code_editor.js.map  editor.js  gitweb.js  splitpanes.js  themes.js  vue-tree.js  vue_components.js
airflow_code_editor/templates/: editor_admin.html  editor_appbuilder.html  editor_body.html  editor_head.html  editor_tail.html  (+6 more)
docker/: .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.yaml
kubernetes/: .gitignore  Makefile  README.md  values.yaml
scripts/: README.md  activate.sh  airflow.sh  airflow1.cfg.tmpl  airflow2.cfg.tmpl  config.sh  coverage.sh  create_test_virtualenv.sh  destroy_test_virtualenv.sh  install.sh  prepare.sh  tests.sh
src/: bookmarks.js  bootstrap-dialog.js  changed_files.js  commit.js  commons.js  diff.js  history.js  history_state.js  index.html  log.js  main.js  stack.js  tabs.js  themes.js  tree_entry.js  workspace.js
test_virtualenv/: airflow.cfg.tmpl  airflow.sh  airflow2.cfg.tmpl  create_test_virtualenv.sh  destroy_test_virtualenv.sh
tests/: test_app_builder_view.py  test_fs.py  test_import.py  test_presigned.py  test_tree.py  test_utils.py
(+51 files in other folders)
