[metadata]
name = airflow_code_editor
version = file: airflow_code_editor/VERSION
keywords = airflow, airflow-plugin, apache-airflow, editor
description = Apache Airflow code editor and file manager
author = Andrea Bonomi
author_email = andrea.bonomi@gmail.com
url = https://github.com/andreax79/airflow-code-editor
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Tracker = http://github.com/andreax79/airflow-code-editor/issues
    Source Code = http://github.com/andreax79/airflow-code-editor

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
include = airflow_code_editor*
exclude =
    scripts
    scripts.*
    tests
    tests.*

[options.entry_points]
airflow.plugins =
    airflow_code_editor = airflow_code_editor.airflow_code_editor:CodeEditorPlugin

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend-ignore =
    E203
    E401
    W504
    E221
